package org.factoriaf5.computers_shop;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class ComputersShopApplication {

	public static void main(String[] args) {
		SpringApplication.run(ComputersShopApplication.class, args);
	}

}
